tests/baselines/reference/numericIndexerTyping1.js
//// [numericIndexerTyping1.js]
var i;
var r = i[1];

var i2;
var r2 = i2[1]; // error: numeric indexer returns the type of the string indexer
